Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -1,28 +1,22 @@
 body {
     background-color: #f6e8c5;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;   
     position: relative;
 }
+html .dark-reader body {
+    background-color: #121212;
+    color: white;
+  }
 
-.noise {
-    background-image: url('noise.jpg');
-    background-repeat: repeat;
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    opacity: 15%;
-    top:0;
-    z-index: 0;
-}
 
 body::after {
     content: "";
     background-image: url('noise.jpg');
     background-repeat: repeat;
     position:absolute;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     margin: 0;
     opacity: 15%;
@@ -32,13 +26,11 @@ body::after {
 
 .main {
     padding: 0px;
-    
     margin: auto;
     position: relative;
-    min-width: 520px;
+
     max-width: 1100px;
     width: calc(100% - 30vw);
-
 }
 
 a {
@@ -68,7 +60,7 @@ a {
 
 .header {
     position: relative;
-
+    overflow: hidden;
     height: 500px;
     
     margin: auto;
@@ -120,7 +112,7 @@ a {
 .header .info {
     margin-left: 10px;
     margin-bottom: 10px;
-    font-size: 2.4vh;
+    font-size: 3vh;
     max-width: 100%;
     box-sizing: border-box;
 }
@@ -138,7 +130,7 @@ a {
 
     margin: auto;
     padding: 10px;
-    font-size: 14pt;
+    font-size: 18pt;
     z-index: 1;
 }
 
@@ -164,6 +156,19 @@ a {
     margin: 0;
 }
 
+.footer {
+    width: 100%;
+    height: 10vh;
+    background-color: black;
+    text-align: center;
+    color: white;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 @keyframes cloudsanim {
     0% {
         background-size: 100% 100%;
@@ -173,19 +178,13 @@ a {
     }
 }
 
-@media screen and (max-width: 1080px) {
 
-    .content {
-        
-        min-width: 100%;
-        box-sizing: border-box;
+@media screen and (max-width: 1000px) {
+    .main {
+        width: 100%;
+        max-width: none;
+        min-width: none;
     }
-    .block p {
-        margin-left: 10px;
-        margin-right: 10px;
-    }   
-}
-@media screen and (max-width: 850px) {
     .header {
         width: 100vw;
         margin: 0;
@@ -194,12 +193,25 @@ a {
         min-width: 0px;
         
     }
-    .main {
-        min-width: 100vw;
-    }
-
     .content {
-        max-width: 100vw;
-        min-width: 100vw;
+        overflow-x: hidden;
+        min-width: 90vw;
+        margin: auto;
+
+
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .header {
+        text-align: center;
+    }
+    .header .title {
+        left: auto;
+        width: 100%;
+        margin: auto;
+    }
+    .header .info {
+        margin: auto;
     }
 }
